--- a/index.html
+++ b/index.html
@@ -71,6 +71,20 @@
     </p>
 
     <a href="mailto:clipboardsync@app.support" class="btn">Contact Developer</a>
+
+    <hr />
+
+    <h2>Privacy Policy</h2>
+    <p>We do not collect or store any personal data from users. ClipboardSync stores all data locally on the user's own device or server. No third-party tracking is used.</p>
+
+    <h2>Terms & Conditions</h2>
+    <p>By using ClipboardSync, you agree to use the app for personal or organizational use only. Redistribution or reverse engineering is prohibited. Premium access is non-transferable.</p>
+
+    <h2>Refund Policy</h2>
+    <p>All purchases for digital products are final. Since ClipboardSync premium is a digital feature unlock, we do not offer refunds once activated.</p>
+
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:clipboardsync@app.support">clipboardsync@app.support</a></p>
   </main>
 
   <footer>
